Work on fragments

--- a/android/app/src/main/res/values-el-rGR/strings.xml
+++ b/android/app/src/main/res/values-el-rGR/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="app_name">vgames</string>
     <string name="tab_features">ΧΑΡΑΚΤΗΡΙΣΤΙΚΑ</string>
-    <string name="tab_genre">ΚΑΤΗΓΟΡΙΕΣ</string>
+    <string name="tab_genre">ΕΙΔΗ</string>
     <string name="tab_home">ΑΡΧΙΚΗ ΣΕΛΙΔΑ</string>
     <string name="tab_companies">ΕΤΑΙΡΙΕΣ</string>
     <string name="tab_platforms">ΠΛΑΤΦΟΡΜΕΣ</string>
