--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">vgames</string>
+    <string name="app_label">vgames</string>
+    <string name="search_hint">Search games</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="tab_home">HOME PAGE</string>
     <string name="tab_genre">GENRE</string>
@@ -9,7 +11,7 @@
     <string name="tab_languages">LANGUAGES</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
-
+    <string name="search_results">Search Results</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
