--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,17 +2,18 @@
     <string name="app_name">vgames</string>
     <string name="app_label">vgames</string>
     <string name="search_hint">Search games</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main" translatable="false">MainActivity</string>
     <string name="tab_home">HOME PAGE</string>
     <string name="tab_genre">GENRE</string>
     <string name="tab_features">FEATURES</string>
     <string name="tab_companies">COMPANIES</string>
     <string name="tab_platforms">PLATFORMS</string>
     <string name="tab_languages">LANGUAGES</string>
-    <string name="action_settings">Settings</string>
-    <string name="section_format">Hello World from section: %1$d</string>
+    <string name="action_settings" translatable="false">Settings</string>
+    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
     <string name="search_results">Search Results</string>
+    <string name="base_url" translatable="false">https://www.serres.gr/vgames/</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
 </resources>
