--- a/android/app/src/main/res/values-el-rGR/strings.xml
+++ b/android/app/src/main/res/values-el-rGR/strings.xml
@@ -10,4 +10,5 @@
     <string name="app_label">vgames</string>
     <string name="search_hint">Αναζήτηση παιχνιδιών</string>
     <string name="search_results">Αποτελέσματα αναζήτησης</string>
+    <string name="genre_fetch_error">Αδυναμία ανάκτησης της λίστας των ειδών!</string>
 </resources>
