Add refresh button into genre list

--- a/android/app/src/main/res/values-el-rGR/strings.xml
+++ b/android/app/src/main/res/values-el-rGR/strings.xml
@@ -11,4 +11,5 @@
     <string name="search_hint">Αναζήτηση παιχνιδιών</string>
     <string name="search_results">Αποτελέσματα αναζήτησης</string>
     <string name="genre_fetch_error">Αδυναμία ανάκτησης της λίστας των ειδών!</string>
+    <string name="genre_list">Είδη παιχνιδιών</string>
 </resources>
