--- a/android/app/src/main/res/values-el-rGR/strings.xml
+++ b/android/app/src/main/res/values-el-rGR/strings.xml
@@ -12,4 +12,6 @@
     <string name="search_results">Αποτελέσματα αναζήτησης</string>
     <string name="genre_fetch_error">Αδυναμία ανάκτησης της λίστας των ειδών!</string>
     <string name="genre_list">Είδη παιχνιδιών</string>
+    <string name="company_fetch_error">Αδυναμία ανάκτησης της λίστας των εταιριών</string>
+    <string name="company_list">Εταιρίες</string>
 </resources>
