--- a/android/app/src/main/res/values-el-rGR/strings.xml
+++ b/android/app/src/main/res/values-el-rGR/strings.xml
@@ -13,5 +13,7 @@
     <string name="genre_fetch_error">Αδυναμία ανάκτησης της λίστας των ειδών!</string>
     <string name="genre_list">Είδη παιχνιδιών</string>
     <string name="company_fetch_error">Αδυναμία ανάκτησης της λίστας των εταιριών</string>
-    <string name="company_list">Εταιρίες</string>
+    <string name="company_list">Εταιρίες παιχνιδιών</string>
+    <string name="feature_list">Χαρακτηριστικά παιχνιδιών</string>
+    <string name="feature_fetch_error">Αδυναμία ανάκτησης της λίστας των χαρακτηριστικών</string>
 </resources>
