Complete platform list

--- a/android/app/src/main/res/values-el-rGR/strings.xml
+++ b/android/app/src/main/res/values-el-rGR/strings.xml
@@ -16,4 +16,8 @@
     <string name="company_list">Εταιρίες παιχνιδιών</string>
     <string name="feature_list">Χαρακτηριστικά παιχνιδιών</string>
     <string name="feature_fetch_error">Αδυναμία ανάκτησης της λίστας των χαρακτηριστικών</string>
+    <string name="platform_list">Πλατφόρμες παιχνιδιών</string>
+    <string name="platform_fetch_error">Αδυναμία ανάκτησης της λίστας των πλατφορμών</string>
+    <string name="language_list">Γλώσσες παιχνιδιών</string>
+    <string name="language_fetch_error">Αδυναμία ανάκτησης της λίστας των γλωσσών</string>
 </resources>
