--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="company_title">Company</string>
     <string name="platform_title">Platform</string>
     <string name="language_title">Language</string>
+    <string name="games_fetch_error">Error fetching game list</string>
 </resources>
