--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -41,5 +41,6 @@
     <string name="exit">Exit</string>
     <string name="exit_application">Exit application?</string>
     <string name="cancel_exit">Cancel</string>
+    <string name="search">Search</string>
 
 </resources>
