--- a/android/app/src/main/res/values-el-rGR/strings.xml
+++ b/android/app/src/main/res/values-el-rGR/strings.xml
@@ -32,4 +32,5 @@
     <string name="sakis">Σάκης Ταουσάνης</string>
     <string name="exit_application">Τερματισμός εφαρμογής?</string>
     <string name="cancel_exit">Επιστροφή</string>
+    <string name="search">Αναζήτηση</string>
 </resources>
