--- a/android/app/src/main/res/values-el-rGR/strings.xml
+++ b/android/app/src/main/res/values-el-rGR/strings.xml
@@ -33,4 +33,5 @@
     <string name="exit_application">Τερματισμός εφαρμογής?</string>
     <string name="cancel_exit">Επιστροφή</string>
     <string name="search">Αναζήτηση</string>
+    <string name="game_title">Τίτλος</string>
 </resources>
