Work on game details activity

--- a/android/app/src/main/res/values-el-rGR/strings.xml
+++ b/android/app/src/main/res/values-el-rGR/strings.xml
@@ -34,4 +34,5 @@
     <string name="cancel_exit">Επιστροφή</string>
     <string name="search">Αναζήτηση</string>
     <string name="game_title">Τίτλος</string>
+    <string name="description">Περιγραφή</string>
 </resources>
