--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -43,5 +43,6 @@
     <string name="exit_application">Exit application?</string>
     <string name="cancel_exit">Cancel</string>
     <string name="search">Search</string>
+    <string name="description">Description</string>
 
 </resources>
