Complete game details activity

--- a/android/app/src/main/res/values-el-rGR/strings.xml
+++ b/android/app/src/main/res/values-el-rGR/strings.xml
@@ -35,4 +35,7 @@
     <string name="search">Αναζήτηση</string>
     <string name="game_title">Τίτλος</string>
     <string name="description">Περιγραφή</string>
+    <string name="features">Χαρακτηριστικά</string>
+    <string name="platforms">Πλατφόρμες</string>
+    <string name="languages">Γλώσσες</string>
 </resources>
