--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -55,6 +55,7 @@
     <string name="no_companies">Company list is empty</string>
     <string name="no_platforms">Platform list is empty</string>
     <string name="no_languages">Language list is empty</string>
+    <string name="image_gallery">Image gallery</string>
 
 
 </resources>
