Prepare search activity and search fragment

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@
     <string name="no_platforms">Platform list is empty</string>
     <string name="no_languages">Language list is empty</string>
     <string name="image_gallery">Image gallery</string>
+    <string name="search_title">Search Criteria</string>
 
 
 </resources>
