--- a/android/app/src/main/res/values-el-rGR/strings.xml
+++ b/android/app/src/main/res/values-el-rGR/strings.xml
@@ -47,4 +47,5 @@
     <string name="no_platforms">Η λίστα των πλατφορμών είναι κενή</string>
     <string name="no_languages">Η λίστα των γλωσσών είναι κενή</string>
     <string name="image_gallery">Συλλογή εικόνων</string>
+    <string name="search_title">Κριτήρια αναζήτησης</string>
 </resources>
