--- a/android/app/src/main/res/values-el-rGR/strings.xml
+++ b/android/app/src/main/res/values-el-rGR/strings.xml
@@ -48,4 +48,9 @@
     <string name="no_languages">Η λίστα των γλωσσών είναι κενή</string>
     <string name="image_gallery">Συλλογή εικόνων</string>
     <string name="search_title">Κριτήρια αναζήτησης</string>
+    <string name="choose_genre">Επιλέξτε είδος</string>
+    <string name="choose_company">Επιλέξτε εταιρία</string>
+    <string name="choose_feature">Επιλέξτε χαρακτηριστικό</string>
+    <string name="choose_platform">Επιλέξτε πλατφόρμα</string>
+    <string name="choose_language">Επιλέξτε γλώσσα</string>
 </resources>
