--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -62,6 +62,10 @@
     <string name="choose_feature">Choose feature</string>
     <string name="choose_platform">Choose platoform</string>
     <string name="choose_language">Choose language</string>
+    <string name="release_year_from">Release year (from)</string>
+    <string name="release_year_to">Release year (to)</string>
+    <string name="game_description">Description</string>
+    <string name="clear">Clear</string>
 
 
 </resources>
