--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
     <string name="price_from">Price (from)</string>
     <string name="price_to">Price (from)</string>
     <string name="no_search_criteria">You have not provided any search criteria</string>
+    <string name="game_details">Game details</string>
 
 
 </resources>
