--- a/android/app/src/main/res/values-el-rGR/strings.xml
+++ b/android/app/src/main/res/values-el-rGR/strings.xml
@@ -61,4 +61,5 @@
     <string name="price_to">Τιμή (έως)</string>
     <string name="no_search_criteria">Δεν έχετε δώσει κριτήρια αναζήτησης</string>
     <string name="game_details">Στοιχεία παιχνιδιού</string>
+    <string name="game_fetch_error">Σφάλμα κατά την ανάκτηση των δεδομένων του παιχνιδιού</string>
 </resources>
