--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="action_settings" translatable="false">Settings</string>
     <string name="section_format" translatable="false">Hello World from section: %1$d</string>
     <string name="search_results">Search Results</string>
-    <string name="base_url" translatable="false">https://www.serres.gr/vgames/</string>
+    <string name="base_url">Base URL</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
@@ -71,6 +71,12 @@
     <string name="no_search_criteria">You have not provided any search criteria</string>
     <string name="game_details">Game details</string>
     <string name="game_fetch_error">Game fetch error</string>
+    <string name="api_settings">API settings</string>
+    <string name="save">Save</string>
+    <string name="refresh">Refresh</string>
+    <string name="game_list">Game list</string>
+    <string name="top_games">Top games</string>
+    <string name="top_games_min_rating">Top games minimum rating</string>
 
 
 </resources>
