--- a/android/app/src/main/res/values-el-rGR/strings.xml
+++ b/android/app/src/main/res/values-el-rGR/strings.xml
@@ -69,4 +69,5 @@
     <string name="top_games">Κορυφαία παιχνίδια</string>
     <string name="top_games_min_rating">Ελάχιστη αξιολόγηση κορυφαίων παιχνιδιών</string>
     <string name="base_url">Βασική διεύθυνση URL</string>
+    <string name="api_settings_saved">Οι παράμετροι API αποθηκεύτηκαν με επιτυχία</string>
 </resources>
