--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -78,6 +78,8 @@
     <string name="top_games">Top games</string>
     <string name="top_games_min_rating">Top games minimum rating</string>
     <string name="api_settings_saved">API settings has been saved successfully</string>
+    <string name="recent_games">New entries</string>
+    <string name="tab_recent">New entries</string>
 
 
 </resources>
